<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">0xCAFE</string>
    <string name="input_hint">Enter a number</string>
    <string name="output_empty">-</string>
    <string name="output_error_incompatible">Incompatible number.</string>
    <string name="output_error_too_much_decimal_points">Number has more than one decimal point.</string>

    <string-array name="bases">
        <item>base 2 (binary)</item>
        <item>base 3</item>
        <item>base 4</item>
        <item>base 5</item>
        <item>base 6</item>
        <item>base 7</item>
        <item>base 8 (octal)</item>
        <item>base 9</item>
        <item>base 10 (decimal)</item>
        <item>base 11</item>
        <item>base 12</item>
        <item>base 13</item>
        <item>base 14</item>
        <item>base 15</item>
        <item>base 16 (hexadecimal)</item>
    </string-array>

    <string name="title_activity_help">Help</string>
    <string name="help_description">        
        With 0xCAFE you can convert numbers from one radix into another.
        The App got its name from programming languages like C, where a hex number starts with 0x.
        Therefore the expression \'0xCAFE\' is a valid number in C, with the decimal value 51966, try it out :)    </string>
    <string name="help_decimalpoint">This app uses a localized decimal point. In this language it is the dot (.).</string>
    <string name="help_overline">The overline character (&#175;) introduces a periodical fraction.
        That means all succeeding digits are part of that period.</string>
    <string name="help_ellipsis">The ellipsis character (&#8230;) at the end of a number
        is indicating an unfinished computation of digits after the decimal point.</string>
    <string name="help_developers">Developed by Bitfröst Studios</string>
    <string name="help_terms">This app is available opensource under https://zeroxcafe.googlecode.com</string>
    <string name="help_version">Current version: %1$s (internal v%2$d)</string>
    <string name="help_rate">Rate in Play store &#8230;</string>
    <string name="help_mail">Write mail to developers &#8230;</string>
    <string name="mail_to">bitfroest@gmail.com</string>
    <string name="mail_subject">About 0xCAFE</string>
    <string name="mail_text">Dear Bitfröst Studios,\nI got an idea, found a bug or just want to appreciate your work.\n\nI &#8230;\n\nWith best regards,\n&#8230;</string>
    <string name="mail_chooser">Send mail &#8230;</string>
    <string name="mail_error">No mail client found.</string>
    <string name="title_activity_wiki">Wiki</string>
    <string name="copy_result">Copy result to clipboard</string>
    <string name="copy_result_success">Result was copied to clipboard.</string>
    <string name="copy_result_error">Failed to copy the result to the clipboard.</string>
    <string name="clip_data_label">0xCAFE result</string>
    <string name="keyboard_decimalpoint">.</string>
    <string name="keyboard_clear">CLR</string>
    <string name="title_activity_steps">Steps</string>
    <string name="steps_title">Computation steps</string>
    <string name="steps_what">Converting %1$s from base %2$d to %3$d.</string>
    <string name="steps_step1">Convert to decimal</string>
    <string name="steps_step2">Convert to target system</string>
    <string name="steps_step2_div">division</string>
    <string name="steps_step2_rem">remainder</string>
    <string name="steps_step2_digit">digit</string>
    <string name="steps_step2_mul">multiplication</string>
    <string name="steps_step2_int">integer</string>
    <string name="steps_step2_method_mul">Multiplication method</string>
    <string name="steps_step2_method_mod">Modulo method</string>
    <string name="steps_result">Result</string>

</resources>