<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_copy_result"
        android:icon="@drawable/ic_action_copy"
        android:showAsAction="ifRoom"
        android:title="@string/copy_result"/>
    <item
        android:id="@+id/action_show_steps"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_steps"/>
    <item
        android:id="@+id/action_wiki"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_wiki"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_help"/>

</menu>